hphp/test/slow/parser/function_call_in_enum.php.expectf

Fatal error: Invalid expression in constant initializer in %s/function_call_in_enum.php on line 4
